# amor

./: CMakeLists.txt
data/: CMakeLists.txt
data/icons/: CMakeLists.txt
data/pics/: CMakeLists.txt
data/pics/animated/: CMakeLists.txt
data/pics/animated/blob/: CMakeLists.txt
data/pics/animated/bonhomme/: CMakeLists.txt
data/pics/animated/eyes/: CMakeLists.txt
data/pics/animated/ghost/: CMakeLists.txt
data/pics/animated/neko/: CMakeLists.txt
data/pics/animated/neko-kuro/: CMakeLists.txt
data/pics/animated/pingu/: CMakeLists.txt
data/pics/animated/tao/: CMakeLists.txt
data/pics/animated/worm/: CMakeLists.txt
data/pics/preview/: CMakeLists.txt
data/pics/static/: CMakeLists.txt
doc/: CMakeLists.txt
src/: CMakeLists.txt  amor.cpp  amor.h  amoranimation.cpp  amoranimation.h  amorbubble.cpp  amorbubble.h  amorconfig.cpp  amordialog.cpp  amordialog.h  amorpixmapmanager.cpp  amorpixmapmanager.h  amorsessionwidget.cpp  amorthememanager.cpp  amorthememanager.h  amortips.cpp  amortips.h  amorwidget.cpp  amorwidget.h  main.cpp  queueitem.cpp
